--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ a:hover{
 .more:hover{
   box-shadow: 0 0 10px #9b9b9b;
   background-color: #212121 !important;
-  color: white;
+  color: white !important;
 }
 .banner{
   height: 504px;
